most styling part  to add

--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <title>Organic Chemistry</title>
 </head>
 
@@ -15,7 +16,7 @@
             <div><span>study tools</span></div>
             <div><span>subjects</span></div>
             <div class="search-bar">
-                <input class="search" type="text" placeholder="Flashcard sets ,textbooks,question">
+                <input class="search" type="text" placeholder="🔍 Flashcard sets ,textbooks,question">
             </div>
             <div><span class="create">+ create</span></div>
             <button>log in</button>
@@ -39,9 +40,12 @@
                 <span class="Organic-chemistry"><a href="">organic chemistry</a></span>
             </div>
             <div class="buttons">
-                <button>💾 save</button>
-                <button>⎙</button>
-                <button>…</button>
+                <button><i class="fas fa-save"></i> Save
+                </button>
+                <button><i class="fas fa-share-alt"></i>
+                </button>
+                <button><i class="fas fa-ellipsis-h"></i>
+                </button>
             </div>
         </nav>
         <div class="sub-title">
@@ -129,7 +133,69 @@
 
         </div>
         <div class="element-term-container">
-
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
         </div>
 
     </section>
@@ -213,41 +279,41 @@
         <div class="country">
             <div class="country-wriper">
                 <h1>countrys</h1>
-                
-                   <div>
+
+                <div>
                     <ul>
-                    <li><a href="">United States</a></li>
-                    <li><a href="">canada</a></li>
-                    <li><a href="">united kingdome</a></li>
-                    <li><a href="">austeraliya</a></li>
-                    <li><a href="">new ziland</a></li>
-                    <li><a href="">germeny</a></li>
-                    <li><a href="">france</a></li>
-                    <li><a href="">spane</a></li>
-                    <li><a href="">italy</a></li>
-                    <li><a href="">japane</a></li>
-                    <li><a href="">south koriya</a></li>
-                    <li><a href="">indiya</a></li>
+                        <li><a href="">United States</a></li>
+                        <li><a href="">canada</a></li>
+                        <li><a href="">united kingdome</a></li>
+                        <li><a href="">austeraliya</a></li>
+                        <li><a href="">new ziland</a></li>
+                        <li><a href="">germeny</a></li>
+                        <li><a href="">france</a></li>
+                        <li><a href="">spane</a></li>
+                        <li><a href="">italy</a></li>
+                        <li><a href="">japane</a></li>
+                        <li><a href="">south koriya</a></li>
+                        <li><a href="">indiya</a></li>
                     </ul>
-                   </div>
-                    <div>
-                        <ul>
-                            <li><a href="">china</a></li>
-                            <li><a href="">mexico</a></li>
-                            <li><a href="">swedinden</a></li>
-                            <li><a href="">nezerland</a></li>
-                            <li><a href="">swewuzerland</a></li>
-                            <li><a href="">brazil</a></li>
-                            <li><a href="">poland</a></li>
-                            <li><a href="">turkey</a></li>
-                            <li><a href="">ukrane</a></li>
-                            <li><a href="">taywon</a></li>
-                            <li><a href="">vitneham</a></li>
-                            <li><a href="">indonoziya</a></li>
-                            <li><a href="">pilippenes</a></li>
-                            <li><a href="">russia</a></li>
-                        </ul>
-                    </div>
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="">china</a></li>
+                        <li><a href="">mexico</a></li>
+                        <li><a href="">swedinden</a></li>
+                        <li><a href="">nezerland</a></li>
+                        <li><a href="">swewuzerland</a></li>
+                        <li><a href="">brazil</a></li>
+                        <li><a href="">poland</a></li>
+                        <li><a href="">turkey</a></li>
+                        <li><a href="">ukrane</a></li>
+                        <li><a href="">taywon</a></li>
+                        <li><a href="">vitneham</a></li>
+                        <li><a href="">indonoziya</a></li>
+                        <li><a href="">pilippenes</a></li>
+                        <li><a href="">russia</a></li>
+                    </ul>
+                </div>
                 </ul>
             </div>
         </div>
