most styling part are complated

--- a/html/alcole.html
+++ b/html/alcole.html
@@ -3,46 +3,50 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Organic Compounds</title>
-    <script src="https://web.chemdoodle.com/downloads/ChemDoodleWeb.js"></script>
+    <title>Horizontal Scroll Cards</title>
     <style>
-        .molecule {
-            display: inline-block;
-            margin: 15px;
-            text-align: center;
+        .card-container {
+            display: flex;
+            overflow-x: auto;
+            padding: 20px;
+            gap: 16px;
+            scroll-snap-type: x mandatory;
+        }
+
+        .card-container::-webkit-scrollbar {
+            height: 8px;
+        }
+
+        .card-container::-webkit-scrollbar-thumb {
+            background-color: #ccc;
+            border-radius: 4px;
+        }
+
+        .card {
+            min-width: 200px;
+            height: 150px;
+            background: linear-gradient(to bottom right, #3f87a6, #ebf8e1);
+            border-radius: 16px;
+            padding: 20px;
+            flex-shrink: 0;
+            scroll-snap-align: start;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 
 <body>
-    <h1>Organic Compounds</h1>
 
-    <!-- Methane -->
-    <div class="molecule">
-        <canvas id="canvas-methane" width="150" height="150"></canvas>
-        <div>Methane (CH₄)</div>
+    <h2>📦 Scrollable Cards</h2>
+    <div class="card-container">
+        <div class="card">Card 1</div>
+        <div class="card">Card 2</div>
+        <div class="card">Card 3</div>
+        <div class="card">Card 4</div>
+        <div class="card">Card 5</div>
+        <div class="card">Card 6</div>
     </div>
 
-    <!-- Methanol -->
-    <div class="molecule">
-        <canvas id="canvas-methanol" width="150" height="150"></canvas>
-        <div>Methanol (CH₃OH)</div>
-    </div>
-
-    <script>
-        // Methane: SMILES = "C"
-        new ChemDoodle.ViewerCanvas('canvas-methane', 150, 150)
-            .loadMolecule('C');
-
-        // Methanol: SMILES = "CO"
-        new ChemDoodle.ViewerCanvas('canvas-methanol', 150, 150)
-            .loadMolecule('CO');
-
-        // Add additional compounds here...
-        // Example:
-        // let canvas = new ChemDoodle.ViewerCanvas('canvas-ethanol', 150, 150);
-        // canvas.loadMolecule('CCO');  // Ethanol
-    </script>
 </body>
 
 </html>
