--- a/html/index.html
+++ b/html/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <title>Organic Chemistry</title>
+    <title>quizlet.com</title>
 </head>
 
 <body>
     <header>
         <div class="header-contaner">
             <h1>quizlet</h1>
-            <div><span>study tools</span></div>
-            <div><span>subjects</span></div>
+            <div><span>study tools <i class="fas fa-chevron-down"></i></span></div>
+            <div><span>subjects <i class="fas fa-chevron-down"></i></span></div>
             <div class="search-bar">
                 <input class="search" type="text" placeholder="🔍 Flashcard sets ,textbooks,question">
             </div>
@@ -68,12 +68,7 @@
             <div class="learn">🎯learn</div>
             <div class="block">🧱blocks</div>
         </div>
-        <div>
-            <button class="">🦢</button>
-            <sub>crated by</sub>
-            <pre><b>quizlette255568</b><span>teacher</span></pre>
 
-        </div>
     </section>
     <!-- **************************************************************** -->
     <section class="cards">
@@ -81,32 +76,74 @@
             <div class="card-wriper">
                 <div class="card-text">
                     <p class="left-text">💡get a hint</p>
-                    <p class="right-text">⭐</p>
+                    <p class="right-text"><button id="sound-toggle"><i class="fas fa-volume-up"></i></button>⭐</p>
                 </div>
                 <div class="chemiical-name">
                     <img src="" alt="">
                 </div>
+                <div class="larg-button"><button>click the card to flip it ☝</button></div>
             </div>
+
             <div class="icones-contaner">
-                <button>▶</button>
-                <button>⚔</button>
-                <div class="movement-conterolerr">
-                    <button>➡️</button>
-                    <p><span class="element-counter">1</span>/67</p>
-                    <button>➡️</button>
+                <div class="laft-icone">
+                    <button><i class="fas fa-play"></i></button>
+                    <button><i class="fas fa-times"></i></button>
                 </div>
-                <button>⛶</button>
+                <div class="movement-conterolerr">
+                    <button><i class="fas fa-arrow-left"></i></button>
+                    <p><span class="element-counter">1</span>/67</p>
+                    <button><i class="fas fa-arrow-right"></i></button>
+                </div>
+                <div class="right-icone">
+                    <button>
+                        <i class="fas fa-expand"></i>
+                    </button>
+                </div>
             </div>
+
         </div>
 
     </section>
     <!-- *************************************************************** -->
     <section class="scrole-card-contaner">
+        <div class="logo-icone">
+            <button class="">🦢</button>
+            <sub>crated by</sub>
+            <pre><b>quizlette255568</b><span>teacher</span></pre>
+
+        </div>
+        <!-- ************************************************************** -->
         <div class="scrole-card-titel">
             <div class="scrole-contener">
                 <div class="scrole-card-linle">
                     <a href="#">flashcard sets</a>
                     <a href="#">study guides</a>
+                </div>
+                <div class="card-container">
+                    <div class="card">Card 1</div>
+                    <div class="card">Card 2</div>
+                    <div class="card">Card 3</div>
+                    <div class="card">Card 4</div>
+                    <div class="card">Card 5</div>
+                    <div class="card">Card 6</div>
+                    <div class="card">Card 1</div>
+                    <div class="card">Card 2</div>
+                    <div class="card">Card 3</div>
+                    <div class="card">Card 4</div>
+                    <div class="card">Card 5</div>
+                    <div class="card">Card 6</div>
+                    <div class="card">Card 1</div>
+                    <div class="card">Card 2</div>
+                    <div class="card">Card 3</div>
+                    <div class="card">Card 4</div>
+                    <div class="card">Card 5</div>
+                    <div class="card">Card 6</div>
+                    <div class="card">Card 1</div>
+                    <div class="card">Card 2</div>
+                    <div class="card">Card 3</div>
+                    <div class="card">Card 4</div>
+                    <div class="card">Card 5</div>
+                    <div class="card">Card 6</div>
                 </div>
                 <div class="scrole-cards">
 
@@ -122,7 +159,7 @@
             <div class="question-icone">
                 <span>🎯</span>
                 <span>1/3</span>
-                <button>study wise learn</button>>
+                <button>study wise learn</button>
             </div>
         </div>
     </section>
@@ -133,6 +170,69 @@
 
         </div>
         <div class="element-term-container">
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
+            <div class="element">
+                <div class="contant">
+                    <h3>alcole</h3>
+                    <div class="vertical"></div>
+                    <img src="/image/alcol.png" alt="alcole">
+                </div>
+            </div>
             <div class="element">
                 <div class="contant">
                     <h3>alcole</h3>
@@ -250,28 +350,40 @@
             </div>
             <div class="language">
                 <h3>language</h3>
-                <select name="language" id="">
-                    <option value="english">
-                        english(USA)
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    </option>
+                <select name="language" id="language-select" size="0">
+                    <option value="english">english(USA)</option>
+                    <option value="">Deutsch</option>
+                    <option value="">Ελληνικά</option>
+                    <option value="">हिन्दी </option>
+                    <option value="">한국어</option>
+                    <option value="">العربية</option>
+                    <option value="">Русский</option>
+                    <option value="">Français</option>
+                    <option value="">中文</option>
+                    <option value="">Bengali</option>
+                    <option value="">Turkey</option>
                 </select>
 
             </div>
             <div class="app">
                 <h3>app</h3>
                 <ul>
-                    <li><a href=""><img src="" alt=""></a></li>
-                    <li><a href=""><img src="" alt=""></a></li>
+                    <li>
+                        <a href="https://play.google.com/store" target="_blank"
+                            style="text-decoration: none; color: #a3a5a4; font-size: 28px; margin-right: 15px;">
+                            <i class="fab fa-google-play"></i>
+                        </a>
+                    </li>
+
+                    <!-- App Store Icon -->
+                    <li>
+                        <a href="https://www.apple.com/app-store/" target="_blank"
+                            style="text-decoration: none; color: #c6cacd; font-size: 28px;">
+                            <i class="fab fa-apple"></i>
+                        </a>
+                    </li>
                 </ul>
+
             </div>
 
         </div>
@@ -322,13 +434,13 @@
         <div class="contact">
             <div class="socal-mediay">
                 <ul>
-                    <li><a href=""></a></li>
-                    <li><a href="">tictoc</a></li>
-                    <li><a href="">x</a></li>
-                    <li><a href="">fasebook</a></li>
-                    <li><a href="">instageram</a></li>
-                    <li><a href="">youtube</a></li>
-                    <li><a href="">linkdin</a></li>
+
+                    <li><a href="#"><i class="fab fa-tiktok"></i></a></li>
+                    <li><a href="#"><i class="fab fa-x-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                    <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                 </ul>
             </div>
             <p> &copy; Quizlet ,inc.</p>
